# VulkanTFG

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Project6.sln  README.md  codigo_limpio.txt  pack_code.py  vcpkg.json
Memoria/: .gitignore  Anotaciones.txt  README.md  bibliografia.bib  memoria.bbl-SAVE-ERROR  memoria.bcf  memoria.listing  memoria.run.xml  memoria.tex
Memoria/Media/: EstadoDelArte_1.csv  EstadoDelArte_1OLD.csv
Memoria/Secciones/: Abstract.tex  Agradecimientos.tex  Anexo.tex  Conclusion.tex  ConclusionyTrabajoFuturo.tex  Desarrollo.tex  EstadoDelArte.tex  Introduccion.tex  JustificacionyObjetivos.tex  MejorasRespectoAlCodigoInicial.tex  Metodologia.tex  Portada.tex  ResultadosyDiscusion.tex  Resumen.tex
Project6/: CMakeLists.txt  F22_Raptor.cpp  F22_Raptor.h  F22_Raptor_pieces.cpp  F22_Raptor_pieces.h  GEAgua.cpp  GEAgua.h  GEApplication.cpp  GEApplication.h  GECamera.cpp  GECamera.h  GECommandContext.cpp  GECommandContext.h  GEComputeShader.cpp  GEComputeShader.h  GECone.cpp  GECone.h  GECube.h  GECylinder.cpp  GECylinder.h  GEDepthBuffer.cpp  GEDepthBuffer.h  GEDescriptorSet.cpp  GEDescriptorSet.h  GEDisk.cpp  GEDisk.h  GEDrawingContext.cpp  GEDrawingContext.h  GEEmitterParams.h  GEFigure.cpp  GEFigure.h  GEFuego.cpp  GEFuego.h  GEGraphicsContext.cpp  GEGraphicsContext.h  GEGround.cpp  GEGround.h  GEHumo.cpp  GEHumo.h  GEIcosahedron.h  (+44 more)
Project6/models/: readme.txt.txt
Project6/models/campfire/: Optimized Stylized Campfire (Game-Ready).mtl
Project6/models/train/: sketchfabpreview.mtl
Project6/models/train-Face/: objdolgochfinal.mtl
Project6/shaders/: CompileShaders.bat  fire.comp  particles.comp  particles_shader.frag  particles_shader.vert  shader.comp.frag  shader.vert  smoke.comp  water.comp
ProjectTFG/: CMakeLists.txt  GEAgua.cpp  GEAgua.h  GEApplication.h  GECamera.cpp  GECamera.h  GEComputeShader.cpp  GEComputeShader.h  GECube.cpp  GECube.h  GEDisk.h  GEDrawingContext.cpp  GEEmitterParams.h  GEFigure.h  GEFuego.cpp  GEGraphicsContext.h  GEHumo.cpp  GEIcosahedron.cpp  GEIndexBuffer.cpp  GEMaterial.h  GEModel.cpp  GEModel.h  GEObject.cpp  GEObject.h  GEParticle.h  GEParticleBuffer.h  GEPiece.cpp  GEPiece.h  GEPyramid.h  GERenderingContext.cpp  GERenderingContext.h  GEScene.cpp  GESkyboxTransform.h  GESkyboxVertex.h  GESphere.cpp  GESphere.h  GETexture.cpp  GETorus.h  GETransform.h  GEUniformBuffer.h  (+4 more)
ProjectTFG/models/newFountain/: Fountain Maya 2014.mb  Fountain Readme.txt  fountainfbx.fbx  fountainobj.mtl
ProjectTFG/models/train/: sketchfabpreview.mtl
ProjectTFG/shaders/: CompileShaders.bat  fire.comp  particles_shader.vert  scene_shader.frag  scene_shader.vert  skybox_shader.frag  skybox_shader.vert  water.comp
